# ai-coder

./: Cargo.toml  LICENSE  README.md
src/: input_dialog.rs  intent_getter.rs  lm_interface.rs  lm_wrapper.rs  main.rs  manager_agent.rs  readme_writer.rs  toolbox.rs  worker.rs
src/toolbox/: file_commands.rs  file_tools.rs  test_commands.rs  toolbox.rs  version_control.rs  worker_commands.rs
src/toolbox/file_commands/: create_dir.rs  create_file.rs  edit_file.rs  read_file.rs  remove_dir.rs  remove_file.rs  view_files.rs
src/toolbox/file_tools/: view_files.rs
src/toolbox/test_commands/: cargo.rs  compile.rs  run_tests.rs
src/toolbox/version_control/: git_call.rs
src/toolbox/worker_commands/: call_worker.rs
