[package]
name = "ai-coder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai-api-rs = "4.0.7"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.113"
shellexpand = "2.1"
async-recursion = "1.0.5"
async-std = "1.10.0"
gtk = "0.9"
futures = "0.3.30"